Fixing your code

--- a/index.html
+++ b/index.html
@@ -25,35 +25,41 @@
 	</header>
 	<hr>
 	<main class="mainBox">
-		<div class="row">
-			<div class="col-6">
-				<h1>Handmade Jewelry.</h1>
+<!--		<div class="row">-->
+			<div class="test1">
+				<div class="set1">
+					<h1>Handmade Jewelry.</h1>
+					<p>Test 1 something something</p>
+				</div>
 			</div>
-			<div class="col-6">
-				<img class="img-responsive" src="images/Products/sets/set3.jpg">
-				<img class="img-responsive" src="images/Products/earrings/stoneBlueEar.jpg">
-				<img class="img-responsive" src="images/Products/earrings/tulipPink.jpg">
-
+			<div class="images">
+				<div class="images1">
+					<img class="img-responsive" src="images/Products/sets/set3.jpg" />
+					<img class="img-responsive" src="images/Products/earrings/stoneBlueEar.jpg"/>
+					<img class="img-responsive" src="images/Products/earrings/tulipPink.jpg">
+				</div>
+				<div class="images2">
+<!--					<img src="images/Products/sets/set3.jpg">-->
+<!--					<img src="images/Products/earrings/stoneBlueEar.jpg">-->
+<!--					<img src="images/Products/earrings/tulipPink.jpg">-->
+				</div>
 			</div>
-
 			<section class="col-6">
-				<img src="images/Products/sets/set3.jpg">
-				<img src="images/Products/earrings/stoneBlueEar.jpg">
-				<img src="images/Products/earrings/tulipPink.jpg">
+
 	
 				<div class="column">
 					<div>
-						<img src="images/Products/bracelets/313806758_1199610543922626_8303138782912045960_n.jpg">
-						<img src="images/Products/313814321_1233362240563178_6480861900068835749_n.jpg">
-						<img src="images/Products/313527231_1097759347773277_978964965273969900_n.jpg">
+<!--						<img src="images/Products/bracelets/313806758_1199610543922626_8303138782912045960_n.jpg">-->
+<!--						<img src="images/Products/313814321_1233362240563178_6480861900068835749_n.jpg">-->
+<!--						<img src="images/Products/313527231_1097759347773277_978964965273969900_n.jpg">-->
 					</div>
 				</div>
 
 				<div class="column">
-					<img src="images/Products/313788239_866884014470758_5923507930678465130_n.jpg">
+<!--					<img src="images/Products/313788239_866884014470758_5923507930678465130_n.jpg">-->
 				</div>
 			</section>
-		</div>
+<!--		</div>-->
 
 		
 	</main>
