Fixing your images v2

--- a/index.html
+++ b/index.html
@@ -34,15 +34,17 @@
 			</div>
 			<div class="images">
 				<div class="images1">
-					<img class="img-responsive" src="images/Products/sets/set3.jpg" />
-					<img class="img-responsive" src="images/Products/earrings/stoneBlueEar.jpg"/>
-					<img class="img-responsive" src="images/Products/earrings/tulipPink.jpg">
-				</div>
-				<div class="images2">
-<!--					<img src="images/Products/sets/set3.jpg">-->
-<!--					<img src="images/Products/earrings/stoneBlueEar.jpg">-->
+					<img src="images/Products/sets/set3.jpg" />
+					<img src="images/Products/earrings/stoneBlueEar.jpg"/>
+					<img src="images/Products/earrings/tulipPink.jpg"/>
+					
+					<div class="images2" >
+					<img src="images/Products/sets/set3.jpg"/>
+					<img src="images/Products/earrings/stoneBlueEar.jpg"/>
 <!--					<img src="images/Products/earrings/tulipPink.jpg">-->
+					</div>
 				</div>
+				
 			</div>
 			<section class="col-6">
 
